# python-project-52

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  coverage.xml  pyproject.toml  run.sh  setup.cfg  task_manager.sqlite3
.github/workflows/: docker-build-push.yml  github_actions.yml
hexlet-code/task_manager/: settings.py  urls.py  views.py
hexlet-code/task_manager/templates/: base.html  index.html
task_manager/: check_message.py  forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: fixture_label.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/: all_labels.html  create_label.html  delete_label.html  update_label.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: status_fixture.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/statuses/templates/: all_statuses.html  create_status.html  delete_status.html  update_status.html
task_manager/tasks/: filters.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task_fixture.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0003_alter_task_description.py  0004_alter_task_description.py  (+4 more)
task_manager/templates/: base.html  base_create.html  base_delete.html  base_update.html  index.html  login.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+27 files in other folders)
